--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -7,6 +7,26 @@ on:
       - created
 
 jobs:
+
+  test_simple:
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-22.04]
+    name: "Test: Simple"
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: suisei-cn/actions-download-file@master
+        id: downloadfile
+        name: Download a file
+        with:
+          url: "[API Endpoint](https://qemu.weilnetz.de/w64/qemu-w64)"
+          target: public/
+          auto-match: true
+
+      - name: Display the file
+        run: head -n8 public/actions-download-file
+
   build:
     runs-on: ubuntu-latest
 
