--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -25,8 +25,10 @@ jobs:
           auto-match: true
         
       - name: Display the files
-        run: ls -a
-
+          run: |
+            cd public/
+            ls -a
+            
   build:
     runs-on: ubuntu-latest
 
