--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -26,7 +26,7 @@ jobs:
         
       - name: Display the files
           run: |
-            cd public/
+            cd public
             ls -a
             
   build:
