--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -9,11 +9,8 @@ on:
 jobs:
 
   test_simple:
-    strategy:
-      matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
     name: "Test: Simple"
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: suisei-cn/actions-download-file@master
@@ -28,7 +25,7 @@ jobs:
         run: |
           cd public
           ls -a
-          head -n1 qemu-w64
+          head -n100 qemu-w64
             
   build:
     runs-on: ubuntu-latest
