--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -21,12 +21,12 @@ jobs:
           cd Test
           curl  https://qemu.weilnetz.de/w64/qemu-w64-setup-20221230.exe --output qemu-w64.exe
          
-      - name: extract-qemu 
+      - name: extract-qemu
+        id: extract-qemu
         uses: edgarrc/action-7z@v1
-          with:
-            args: 7z a -t7z -mx=9 build.7z ./build/
-            
-         
+        with:
+          args: 7z a -t7z -mx=9 build.7z ./build/
+        
       - name: create-archive
         run: tar -czf "$ARCHIVE_NAME".tar.gz "$ARCHIVE_NAME"
       - name: create-checksum
