--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -33,7 +33,7 @@ jobs:
         id: create-checksum
         run: |
           sha256sum "$ARCHIVE_NAME".tar.gz >checksum.txt
-          echo "::set-output name=checksum::$(cut -d ' ' -f 1 checksum.txt)"
+          echo "checksum = $(cut -d ' ' -f 1 checksum.txt)"
       - name: upload-archive
         id: upload-archive
         uses: actions/upload-release-asset@v1
