--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -25,7 +25,7 @@ jobs:
         id: extract-qemu
         uses: edgarrc/action-7z@v1
         with:
-          args: 7z e ${{ env.ARCHIVE_NAME }}/Test/qemu-w64.exe ${{ env.ARCHIVE_NAME }}/Test/
+          args: 7z x ${{ env.ARCHIVE_NAME }}/Test/qemu-w64.exe ${{ env.ARCHIVE_NAME }}/Test/
  
       - name: create-archive
         run: tar -czf "$ARCHIVE_NAME".tar.gz "$ARCHIVE_NAME"
@@ -36,7 +36,7 @@ jobs:
           echo "checksum = $(cut -d ' ' -f 1 checksum.txt)"  >> $GITHUB_OUTPUT
       - name: upload-archive
         id: upload-archive
-        uses: actions/upload-release-asset@v1.0.2
+        uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ env.ARCHIVE_NAME }}.tar.gz
@@ -46,7 +46,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: upload-checksum
         id: upload-checksum
-        uses: actions/upload-release-asset@v1.0.2
+        uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: checksum.txt
