--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -28,6 +28,7 @@ jobs:
  
       - name: list-module
         run: |
+          chmod -R o+rwx Test/
           ls * -r
  
       - name: copy-module-next
