--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -28,8 +28,7 @@ jobs:
  
       - name: list-module
         run: |
-          su - root
-          chmod -R o+rwx Test/
+          sudo chmod -R o+rwx Test/
           ls * -r
  
       - name: copy-module-next
