--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -20,13 +20,13 @@ jobs:
           mkdir Qemu
           cd Qemu
           curl  https://qemu.weilnetz.de/w64/
-          curl  https://qemu.weilnetz.de/w64/ > page.txt
+          curl  https://qemu.weilnetz.de/w64/ -O page.txt
         
       - name: download-next
         run: |
           grep qemu-w64-setup-*.exe  page.txt > grep.txt
           cat grep.txt
-          curl  https://qemu.weilnetz.de/w64/qemu-w64-setup-20221230.exe --output qemu-w64.exe
+          curl  https://qemu.weilnetz.de/w64/qemu-w64-setup-20221230.exe -O qemu-w64.exe
         
       - name: extract-qemu
         id: extract-qemu
