--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -22,6 +22,8 @@ jobs:
           curl  https://qemu.weilnetz.de/w64/
           curl  https://qemu.weilnetz.de/w64/ --output page.txt
           ls * -r
+          cat page.txt
+          tree
         
       - name: download-next
         run: |
