--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -34,10 +34,10 @@ jobs:
           cd Qemu
           ls * -r
           echo greptest
-          grep qemu-w64-setup-.*exe  page.txt > grep.txt
+          grep -o qemu-w64-setup-.*exe  page.txt > grep.txt
           echo grepfinish
           cat grep.txt
-          curl  https://qemu.weilnetz.de/w64/qemu-w64-setup-20221230.exe -O qemu-w64.exe
+          curl  https://qemu.weilnetz.de/w64/qemu-w64-setup-20221230.exe --output qemu-w64.exe
         
       - name: extract-qemu
         id: extract-qemu
