--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -36,8 +36,8 @@ jobs:
           grep -o ">qemu-w64-setup-.*exe"  page.txt | cut -c 1- > grep.txt
           echo grepfinish
           cat grep.txt
-          echo https://qemu.weilnetz.de/w64/"$(cat config.txt)"
-          curl https://qemu.weilnetz.de/w64/"$(cat config.txt)" --output qemu-w64.exe
+          echo Found URL: https://qemu.weilnetz.de/w64/"$(cat grep.txt)"
+          curl https://qemu.weilnetz.de/w64/"$(cat grep.txt)" --output qemu-w64.exe
         
       - name: extract-qemu
         id: extract-qemu
