--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -32,12 +32,10 @@ jobs:
           ls * -r
           cd Qemu
           ls * -r
-          echo greptest
           grep -o ">qemu-w64-setup-.*exe" page.txt | cut -c 2- > grep.txt
-          echo grepfinish
-          cat grep.txt
           echo Found URL: https://qemu.weilnetz.de/w64/"$(cat grep.txt)"
           curl https://qemu.weilnetz.de/w64/"$(cat grep.txt)" --output qemu-w64.exe
+          cd ..
         
       - name: extract-qemu
         id: extract-qemu
@@ -48,16 +46,21 @@ jobs:
       - name: clean-module
         run: |
           sudo chmod -R o+rwx Module/
-          sudo rm -rf *PLUGINSDIR/
-          sudo rm -rf README.md
           cd Module/
+          echo remove files
+          sudo rm -rf --no-preserve-root *PLUGINSDIR/
+          echo remove done
           ls * -r
+          cd ..
       - name: copy-module-next
         run: |
           cp -r Module/. "$ARCHIVE_NAME"/
+          cd Module/
+          sudo rm -rf README.md
+          cd ..
       - name: create-archive
         run: |
-          GZIP=-9 tar -czf "$ARCHIVE_NAME".tar.gz "$ARCHIVE_NAME"
+          tar -I 'gzip -9' -czf "$ARCHIVE_NAME".tar.gz "$ARCHIVE_NAME"
       - name: create-checksum
         id: create-checksum
         run: |
