--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -86,7 +86,7 @@ jobs:
           echo "checksum = $(cut -d ' ' -f 1 checksum.txt)"  >> $GITHUB_OUTPUT
       - name: upload-archive
         id: upload-archive
-        uses: actions/upload-release-asset
+        uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ${{ env.ARCHIVE_NAME }}.tar.gz
@@ -96,7 +96,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: upload-checksum
         id: upload-checksum
-        uses: actions/upload-release-asset
+        uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: checksum.txt
