--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -63,9 +63,9 @@ jobs:
       - name: extract-data
         id: extract-data
         uses: edgarrc/action-7z@v1
-        run: |
-          7z x Work64/qemu-w64.exe -oModule64/
-          7z x Work32/qemu-w32.exe -oModule32/
+        with:
+          args: 7z x Work64/qemu-w64.exe -oModule64/
+          args: 7z x Work32/qemu-w32.exe -oModule32/
  
       - name: clean-module
         run: |
