--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -60,26 +60,38 @@ jobs:
           curl https://qemu.weilnetz.de/w64/"$(cat grep.txt)" --output qemu-w32.exe
           cd ..   
         
-      - name: extract-data
-        id: extract-data
+      - name: extract-data-64
+        id: extract-data-64
         uses: edgarrc/action-7z@v1
         with:
           args: 7z x Work64/qemu-w64.exe -oModule64/
+          
+      - name: extract-data-32
+        id: extract-data-32
+        uses: edgarrc/action-7z@v1
+        with:
           args: 7z x Work32/qemu-w32.exe -oModule32/
  
       - name: clean-module
         run: |
           sudo chmod -R o+rwx Module64/
           cd Module64/
-          echo remove files
           sudo rm -rf *PLUGINSDIR/
-          echo remove done
-          ls * -r
+          cd ..
+          sudo chmod -R o+rwx Module32/
+          cd Module32/
+          sudo rm -rf *PLUGINSDIR/
           cd ..
           
       - name: copy-module-next
         run: |
           cp -r Module64/. "$PKG_FOLDER"/
+          cd "$PKG_FOLDER"/
+          sudo rm -rf README.md
+          echo Final Package files
+          ls *
+          cd ..
+          cp -r Module32/. "$PKG_FOLDER"/
           cd "$PKG_FOLDER"/
           sudo rm -rf README.md
           echo Final Package files
